实现菜单打印及路径搜索